<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <TextView android:id="@+id/main_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_hint1"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:textSize="30sp"/>
    <TextView android:id="@+id/main_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_hint2"
        android:paddingLeft="10dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <Button android:id="@+id/main_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_article"/>
    <Button android:id="@+id/main_sentence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_sentence"/>
    <Button android:id="@+id/main_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_word"/>
    

</LinearLayout>
