<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/input_article_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_article_hint1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="30sp"/>
    <EditText android:id="@+id/input_article_edittext"
        android:hint="@string/input_article_hint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:lines="10"/>
    <Button android:id="@+id/input_article_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_article_submit"/>

</LinearLayout>
